<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Surf For Life Donation Tracker</string>
    <string name="surf_for_life">Surf For Life</string>
    <string name="action_bar_name">Donation Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="select_volunteers">Select a Volunteer:</string>
    <string name="fund_raising_status">Fundraising status for:</string>
    <string name="see_progress">SEE PROGRESS</string>
    <string name="remember">remember</string>
    <string name="share">Share</string>
    <string name="tweet">Tweet</string>
    <string name="volunteer_profile">DONATION PAGE</string>

</resources>