<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VolunteerDonationStatusActivity" >

    <TextView
        android:id="@+id/fundraising_status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fund_raising_status" />

    <TextView
        android:id="@+id/fundraising_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remember_selected_volunteer_checkbox"
        android:layout_alignLeft="@+id/fundraising_status_title"
        android:layout_alignRight="@+id/remember_selected_volunteer_checkbox"
        android:layout_below="@+id/volunteer_name_title"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share" />

        <Button
            android:id="@+id/tweet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweet" />

        <Button
            android:id="@+id/volunteer_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volunteer_profile" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/remember_selected_volunteer_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:text="@string/remember" />

    <TextView
        android:id="@+id/volunteer_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fundraising_status_title"
        android:layout_alignRight="@+id/fundraising_status_text"
        android:layout_below="@+id/fundraising_status_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>